# api/v1/schema/todo.go
@@ -1,8 +1,8 @@
 package schema
 
 type TodoRequest struct {
-	Title     string `json:"title" validate:"required,min=3"`
-	Completed bool   `json:"completed" validate:"required"`
+	Title     string `json:"title" validate:"required,min=3"` //  example:"Sample Todo"
+	Completed bool   `json:"completed"`                       //example:"false"
 }
 
 /* type FindTodo struct {
@@ -10,9 +10,9 @@ type TodoRequest struct {
 } */
 
 type TodoResponse struct {
-	ID        int    `json:"id" validate:"required"`
+	ID        int    `json:"id"`
 	Title     string `json:"title" validate:"required,min=3"`
-	Completed bool   `json:"completed" validate:"required"`
+	Completed bool   `json:"completed"`
 }
 
 type MessageResponse struct {
@@ -25,3 +25,16 @@ type MessageResponse struct {
 	Message string
 }
 */
+
+type TodoSQLResponse struct {
+	ID        uint   `json:"id" example:"1"`
+	Title     string `json:"title" example:"Sample Todo"`
+	Completed bool   `json:"completed" example:"false"`
+	CreatedAt string `json:"created_at"` // example:"2023-01-01T00:00:00Z"
+	UpdatedAt string `json:"updated_at"` // example:"2023-01-01T00:00:00Z"
+}
+
+type MessageSQLResponse struct {
+	MessageResponse
+	DeletedAt string `json:"delete_at"`
+}
